import org.jetbrains.intellij.platform.gradle.IntelliJPlatformType
import org.jetbrains.intellij.platform.gradle.TestFrameworkType

plugins {
    id("java")
    id("org.jetbrains.intellij.platform") version "2.16.0"
}

group = 'org.kdb.studio'
version = '1.2.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    intellijPlatform {
        defaultRepositories()
        jetbrainsRuntime()
    }
    flatDir {
        dirs 'optional-dependencies'
    }
}

dependencies {
    implementation group: 'org.apache.commons', name: 'commons-pool2', version: '2.5.0'
    implementation group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
    implementation group: 'org.jfree', name: 'jfreesvg', version: '3.3'
    implementation group: 'com.orsonpdf', name: 'orsonpdf', version: '1.8'
    implementation group: 'com.github.erosb', name: 'everit-json-schema', version: '1.14.1'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.14.0'

    compileOnly name: 'q-intellij-plugin', version: '1.9'
    testImplementation group: 'junit', name: 'junit', version: '4.12'

    intellijPlatform {
        pycharmCommunity('2026.1.3') {
            useInstaller = false
        }
        bundledPlugin('com.intellij.modules.json')
        testFramework TestFrameworkType.Platform.INSTANCE
        jetbrainsRuntime()
        pluginVerifier()
    }
}

intellijPlatform {
    pluginConfiguration {
        version = project.version
        changeNotes = 'Modernized build for PyCharm 2026.1.3.'
        ideaVersion {
            sinceBuild = '261'
            untilBuild = provider { null }
        }
    }

    pluginVerification {
        ides {
            create(IntelliJPlatformType.PyCharmCommunity, '2026.1.3', { config ->
                config.useInstaller = false
            })
        }
    }
}
